--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,9 +10,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
 		
 
-	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="assets/js/retina.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="assets/js/smoothscroll.js"></script>
-	<script type="text/javascript" src="assets/js/jquery-func.js"></script>
+	<script type="text/javascript" src="{{site.url}}/assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="{{site.url}}/assets/js/retina.js"></script>
+	<script type="text/javascript" src="{{site.url}}/assets/js/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="{{site.url}}/assets/js/smoothscroll.js"></script>
+	<script type="text/javascript" src="{{site.url}}/assets/js/jquery-func.js"></script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s); js.id=id;js.async=true;js.src="https://a248.e.akamai.net/secure.meetupstatic.com/s/script/541522619002077648/api/mu.btns.js?id=n6bc15p4k9esfp98dengr6csqh";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","mu-bootjs");</script>
