--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,25 +2,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="NY Haskell Users Group">
     <meta name="author" content="www.ny-haskell.org">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
+    <link rel="shortcut icon" href="{{site.url}}/assets/ico/favicon.png">
 
     <title>NY Haskell</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="{{site.url}}/assets/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/icomoon.css">
-    <link href="assets/css/animate-custom.css" rel="stylesheet">
+    <link href="{{site.url}}/assets/css/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{site.url}}/assets/css/icomoon.css">
+    <link href="{{site.url}}/assets/css/animate-custom.css" rel="stylesheet">
 
 
     
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
     
-    <script src="assets/js/jquery.min.js"></script>
-	<script type="text/javascript" src="assets/js/modernizr.custom.js"></script>
+    <script src="{{site.url}}/assets/js/jquery.min.js"></script>
+	<script type="{{site.url}}/text/javascript" src="{{site.url}}/assets/js/modernizr.custom.js"></script>
     
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
