--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,13 +10,13 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#home" class="smoothScroll">Home</a></li>
-			<li> <a href="#about" class="smoothScroll"> About</a></li>
-			<li> <a href="#events" class="smoothScroll"> Events</a></li>
-			<li> <a href="#team" class="smoothScroll"> Team</a></li>
-			<li> <a href="#videos" class="smoothScroll"> Videos</a></li>
-			<li> <a href="#blog" class="smoothScroll"> Blog</a></li>
-			<li> <a href="#contact" class="smoothScroll"> Contact</a></li>
+            <li><a href="{{site.url}}#home" class="smoothScroll">Home</a></li>
+			<li> <a href="{{site.url}}#about" class="smoothScroll"> About</a></li>
+			<li> <a href="{{site.url}}#events" class="smoothScroll"> Events</a></li>
+			<li> <a href="{{site.url}}#team" class="smoothScroll"> Team</a></li>
+			<li> <a href="{{site.url}}#videos" class="smoothScroll"> Videos</a></li>
+			<li> <a href="{{site.url}}#blog" class="smoothScroll"> Blog</a></li>
+			<li> <a href="{{site.url}}#contact" class="smoothScroll"> Contact</a></li>
         </div><!--/.nav-collapse -->
       </div>
     </div>
