--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="NY Haskell Users Group">
     <meta name="author" content="www.ny-haskell.org">
-    <link rel="shortcut icon" href="{{site.url}}/assets/ico/favicon.png">
+    <link rel="shortcut icon" href="{{site.url}}/assets/img/nyhug.ico">
 
     <title>NY Haskell</title>
 
