improved nav menu

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,20 +3,24 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
+          
+          <a class="navbar-brand scroll" href="#top">
+            <img src="assets/img/nyhaskell.png" width="28" alt="NY Haskell Users Group"> NY Haskell Users Group
+          </a>
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon icon-heart" style="font-size:30px; color:#3498db;"></span>
           </button>
           <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="icon" style="font-size:18px; color:#3498db;"></span></a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav navbar-right">
             <li><a href="{{site.url}}#home" class="smoothScroll">Home</a></li>
-			<li> <a href="{{site.url}}#about" class="smoothScroll"> About</a></li>
-			<li> <a href="{{site.url}}#events" class="smoothScroll"> Events</a></li>
-			<li> <a href="{{site.url}}#team" class="smoothScroll"> Team</a></li>
-			<li> <a href="{{site.url}}#videos" class="smoothScroll"> Videos</a></li>
-			<li> <a href="{{site.url}}#blog" class="smoothScroll"> Blog</a></li>
-			<li> <a href="{{site.url}}#contact" class="smoothScroll"> Contact</a></li>
+      			<li> <a href="{{site.url}}#about" class="smoothScroll"> About</a></li>
+      			<li> <a href="{{site.url}}#events" class="smoothScroll"> Events</a></li>
+      			<li> <a href="{{site.url}}#team" class="smoothScroll"> Team</a></li>
+      			<li> <a href="{{site.url}}#videos" class="smoothScroll"> Videos</a></li>
+      			<li> <a href="{{site.url}}#blog" class="smoothScroll"> Blog</a></li>
+      			<li> <a href="{{site.url}}#contact" class="smoothScroll"> Contact</a></li>
         </div><!--/.nav-collapse -->
       </div>
     </div>
