--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,20 +4,47 @@
 }
 
 .navbar-nav > li > a {
-    padding-top: 25px;
-    padding-bottom: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .navbar-brand {
-    float: left;
-    font-size: 18px;
-    height: 70px;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    font-size: 25px;
-    font-weight: 600;
+  float: left;
+  font-size: 18px;
+  height: 70px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  font-size: 25px;
+  font-weight: 600;
 }
 
 .navbar-brand:hover{
   color: #CCC;
 }
+
+
+#headerwrap .form{
+  /*background: rgba(90,90,90,0.7);*/
+  padding: 80px 20px;
+  background: rgba(0, 200, 200, 0.7);
+  background: -moz-linear-gradient(left, rgba(0, 170, 170, 0.8) 0%, rgba(0, 200, 200, 0.7) 100%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(0, 170, 170, 0.8)), color-stop(100%, rgba(0, 200, 200, 0.7)));
+  background: -webkit-linear-gradient(left, rgba(0, 170, 170, 0.8) 0%, rgba(0, 200, 200, 0.7) 100%);
+  background: -o-linear-gradient(left, rgba(0, 170, 170, 0.8) 0%, rgba(0, 200, 200, 0.7) 100%);
+  background: -ms-linear-gradient(left, rgba(0, 170, 170, 0.8) 0%, rgba(0, 200, 200, 0.7) 100%);
+  background: linear-gradient(to right, rgba(0, 170, 170, 0.8) 0%, rgba(0, 200, 200, 0.7) 100%);
+}
+
+/* purple
+#headerwrap .form{
+  background: rgba(90,90,90,0.7); //rgb(0, 170, 170)
+  padding: 80px 20px;
+  background: rgba(25, 17, 31, 0.7);
+  background: -moz-linear-gradient(left, rgba(25, 17, 31, 0.7) 0%, rgba(44, 30, 55, 0.7) 100%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(25, 17, 31, 0.7)), color-stop(100%, rgba(44, 30, 55, 0.7)));
+  background: -webkit-linear-gradient(left, rgba(25, 17, 31, 0.7) 0%, rgba(44, 30, 55, 0.7) 100%);
+  background: -o-linear-gradient(left, rgba(25, 17, 31, 0.7) 0%, rgba(44, 30, 55, 0.7) 100%);
+  background: -ms-linear-gradient(left, rgba(25, 17, 31, 0.7) 0%, rgba(44, 30, 55, 0.7) 100%);
+  background: linear-gradient(to right, rgba(25, 17, 31, 0.7) 0%, rgba(44, 30, 55, 0.7) 100%);
+}
+*/
