--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -293,8 +293,8 @@ a:after {
 
 #headerwrap h1 {
 	color:#222222;
-	margin-top: 90px;
-	padding-bottom: 30px;
+	margin-top: 0;
+	padding-bottom: 0;
 	letter-spacing: 8px;
 	font-size: 100px;
 	font-weight: bold;
@@ -303,11 +303,10 @@ a:after {
 
 #headerwrap p {
 	color:#FFFFFF;
-	font-size: 40px;
+    font-size: 20px;
 	font-weight: 400;
 	text-align: center;
-	line-height: 40px;
-	letter-spacing: 3px;
+	letter-spacing: 2px;
 	margin-left: 15px;
     margin-bottom: 20px;
 }
