_events and _team pages

--- a/_includes/_team.html
+++ b/_includes/_team.html
@@ -20,12 +20,14 @@
 <div id="greywrap">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6 centered">
+      <br/><br/>
+      <div class="col-lg-6 col-me-6 centered">
         <img class="img-responsive" src="assets/img/nyhaskell.png" align="right">
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-me-6">
+        <br/>
         <h2>Want to volunteer with us?</h2>
-        <p>Do you want to help us nurture the haskell community?</p>
+        <p>Do you want to help us nurture the haskell community? <br/> Send us an email to info [at] ny-haskell [dot] org</p>
         <p><a class="btn btn-success" href="mailto:info@ny-haskell.org">Contact Us</a></p>
       </div>          
     </div><!-- row -->
