--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,26 @@
 
 		<div id="footerwrap">
 			<div class="container">
-				<h4><a href="http://www.ny-haskell.org">NY-Haskell</a> - Copyright 2015</h4>
+        <ul class="social">
+            <li> <a href="http://youtube.com/channel/UCzNYHE7Kj6pBqq5h8LG9Zcg"><span class="icon icon-youtube"></span></a></li>
+            <li> <a href="http://github.com/ny-haskell"><span class="icon icon-github"></span></a></li>
+        </ul>
+
+        <small> © 2015 <a href="http://www.ny-haskell.org">NY-Haskell</a> - All rights reserved </small>
+        <br/>
+        <small> Designed by <a href="http://github.com/katychuang">Kat Chuang</a></small> 
 			</div>
 		</div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 		
 
-	<script type="text/javascript" src="{{site.url}}/assets/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="{{site.url}}/assets/js/retina.js"></script>
-	<script type="text/javascript" src="{{site.url}}/assets/js/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="{{site.url}}/assets/js/smoothscroll.js"></script>
-	<script type="text/javascript" src="{{site.url}}/assets/js/jquery-func.js"></script>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s); js.id=id;js.async=true;js.src="https://a248.e.akamai.net/secure.meetupstatic.com/s/script/541522619002077648/api/mu.btns.js?id=n6bc15p4k9esfp98dengr6csqh";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","mu-bootjs");</script>
+<script type="text/javascript" src="{{site.url}}/assets/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="{{site.url}}/assets/js/retina.js"></script>
+<script type="text/javascript" src="{{site.url}}/assets/js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="{{site.url}}/assets/js/smoothscroll.js"></script>
+<script type="text/javascript" src="{{site.url}}/assets/js/jquery-func.js"></script>
+ <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s); js.id=id;js.async=true;js.src="https://a248.e.akamai.net/secure.meetupstatic.com/s/script/541522619002077648/api/mu.btns.js?id=n6bc15p4k9esfp98dengr6csqh";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","mu-bootjs");</script>
