gather view data

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,3 +24,14 @@
 <script type="text/javascript" src="{{site.url}}/assets/js/smoothscroll.js"></script>
 <script type="text/javascript" src="{{site.url}}/assets/js/jquery-func.js"></script>
  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s); js.id=id;js.async=true;js.src="https://a248.e.akamai.net/secure.meetupstatic.com/s/script/541522619002077648/api/mu.btns.js?id=n6bc15p4k9esfp98dengr6csqh";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","mu-bootjs");</script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-75880492-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
