fix broken image link

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
         <div class="navbar-header">
           
           <a class="navbar-brand scroll" href="#top">
-            <img src="assets/img/nyhaskell.png" width="28" alt="NY Haskell Users Group"> NY Haskell
+            <img src="/assets/img/nyhaskell.png" width="28" alt="NY Haskell Users Group"> NY Haskell
           </a>
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon icon-heart" style="font-size:30px; color:#3498db;"></span>
