--- a/_includes/_events.html
+++ b/_includes/_events.html
@@ -30,7 +30,7 @@
     <div class="col-lg-4 col-md-4 callout">
       <div class="icon-box">
         <h2><span class="icon icon-pushpin"></span> Sign up</h2>
-        <p>Our recurreing events are posted on the <a href="http://meetup.com/ny-haskell">meetup</a>, sign up to get notified of upcoming events and save your seat for the event.</p>
+        <p>Our recurring events are posted on the <a href="http://meetup.com/ny-haskell">meetup</a>, sign up to get notified of upcoming events and save your seat for the event.</p>
       </div>
     </div><!-- col-lg-4 -->
       
