--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="{{site.url}}/assets/css/icomoon.css">
     <link href="{{site.url}}/assets/css/animate-custom.css" rel="stylesheet">
     <link href="{{site.url}}/assets/css/custom.css" rel="stylesheet">
+    <link href="{{site.url}}/assets/css/syntax.css" rel="stylesheet">
 
 
     
