Adds the navbar height as an offset to the target elements in the smoothscroll script. Closes #4.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,19 +11,17 @@
 
     <!-- Custom styles for this template -->
     <link href="{{site.url}}/assets/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{site.url}}/assets/css/icomoon.css">
+    <link href="{{site.url}}/assets/css/icomoon.css" rel="stylesheet">
     <link href="{{site.url}}/assets/css/animate-custom.css" rel="stylesheet">
     <link href="{{site.url}}/assets/css/custom.css" rel="stylesheet">
     <link href="{{site.url}}/assets/css/syntax.css" rel="stylesheet">
 
-
-    
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
-    
-    <script src="{{site.url}}/assets/js/jquery.min.js"></script>
-	<script type="{{site.url}}/text/javascript" src="{{site.url}}/assets/js/modernizr.custom.js"></script>
-    
+
+    <script src="{{site.url}}/assets/js/jquery.min.js" type="text/javascript"></script>
+    <script src="{{site.url}}/assets/js/modernizr.custom.js" type="text/javascript"></script>
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="assets/js/html5shiv.js"></script>
