--- a/_includes/_events.html
+++ b/_includes/_events.html
@@ -8,9 +8,9 @@
     <br>
     <div class="col-lg-offset-2 col-lg-8 centered">
       <p>
-      We have talks every fourth Wednesday; our next event is April 27th, 2016 at 7pm. <br />Details will be announced soon.
+      We have talks every fourth Wednesday; our next event is July 27th, 2016 at 7pm. <br />Details will be announced soon.
       </p>
-      <!-- <p><a href="http://www.meetup.com/NY-Haskell/events/229615869/" data-event="229615869" class="mu-rsvp-btn">RSVP</a></p> -->
+      <p><a href="http://www.meetup.com/NY-Haskell/" class="mu-rsvp-btn">RSVP</a></p>
       <p></p>
       <p></p>
     </div><!-- col-lg -->
