Updating event link
Resolving Issue #12.

--- a/_includes/_events.html
+++ b/_includes/_events.html
@@ -8,16 +8,17 @@
     <br>
     <div class="col-lg-offset-2 col-lg-8 centered">
       <p>
-      We have talks every fourth Wednesday; our next event is July 27th, 2016 at 7pm. <br />Details will be announced soon.
+      We have talks every fourth Wednesday; our next event is on October 26th, 2016 at 7pm. <br />
+      Details <a href = "http://www.meetup.com/NY-Haskell/events/234761999/">here</a>.
       </p>
-      <p><a href="http://www.meetup.com/NY-Haskell/" class="mu-rsvp-btn">RSVP</a></p>
+      <p><a href="http://www.meetup.com/NY-Haskell/events/234761999/" class="mu-rsvp-btn">RSVP</a></p>
       <p></p>
       <p></p>
     </div><!-- col-lg -->
   </div><!-- row -->
   
   <div class="row">
-    <h4 class="centered">Our recurring events are <a href="http://meetup.com/NY-Haskell">posted on meetup</a></h4>
+    <h4 class="centered">Our recurring events are <a href="http://meetup.com/NY-Haskell">posted on Meetup</a></h4>
     <br>
   </div><!-- row -->
 </div><!-- container -->
