--- a/_includes/_videos.html
+++ b/_includes/_videos.html
@@ -37,7 +37,7 @@
               </div>
               <div class="modal-body">
                 <p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/{{video.youtubeId}}" frameborder="0" allowfullscreen></iframe>
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/{{video.youtubeId}}" frameborder="0" allowfullscreen></iframe>
                 </p>
                 <p>
                   <b>{{video.title}}</b>, by {{video.speaker.name}}
@@ -72,3 +72,4 @@
     </div><!-- /row -->
   </div><!-- /container -->
   </div><!-- /container -->
+
