--- a/_includes/_team.html
+++ b/_includes/_team.html
@@ -8,8 +8,8 @@
     <br>
     <div class="col-lg-122 centered">
       <h4><b>Gershom Bazerman</b>, <b>Doug Beardsley</b>, 
-      <b>Evie Brothwick</b>, <b>Kat Chuang</b>, <b>Ozgun Ataman</b>,
-      <b>Rick Minerich</b>, <b>Ryan Trinkle</b></h4>
+      <b>Evie Borthwick</b>, <b>Kat Chuang</b>, <b>Ozgun Ataman</b>,
+      <b>Rick Minerich</b>, <b>Ishaq Sloan</b>, <b>Ryan Trinkle</b></h4>
       <p>&nbsp;</p>
     </div><!-- col-lg-3 -->
 
